# robot-teach-writing-data

./: .gitignore  README.md  config.yaml  example.cpp  q_font1.txt  requirements.txt  run.py
control/: .server_main.py.swp  ctl_utils.py  main.py  push_command.sh  requirements.txt
control/motor_control/: .CMake.swp  CMakeLists.txt  CMakeLists.txt.save  README.md  main.cpp  setup.py
control/motor_control/GyemsCan/: CMakeLists.txt  gyems_can_functions.cpp  gyems_can_functions.h
control/motor_control/Model526/: CMakeLists.txt  model526.c  model526.cpp  model526.h
control/motor_control/RenishawCAN/: renishaw_can_functions.cpp  renishaw_can_functions.hpp
control/motor_control/SEAModel/: CMakeLists.txt  SEA_model.c  SEA_model.h
control/motor_control/apps/: _test_ctrl_SEA.cpp  _test_ctrl_imped.cpp
control/motor_control/main/: CMakeLists.txt  _test_scripts_zhimin.hpp  atidaq_help.c  test_mit_can_zhimin.cpp
control/motor_control/pybind11/.github/workflows/: ci.yml  format.yml
control/motor_control/pybind11/pybind11/: setup_helpers.py
control/motor_control/pybind11/tests/: test_docstring_options.py  test_eigen.py  test_exceptions.py  test_factory_constructors.py  test_kwargs_and_defaults.py  test_methods_and_attributes.py  test_multiple_inheritance.py  test_numpy_array.py  test_operator_overloading.py
control/motor_control/robot_cal/: CMakeLists.txt  robot_cal.cpp  robot_cal.hpp
control/motor_control/scripts/: mklatencyplot.bash  s526_test.py
control/motor_control/sea_ctl/: CPS_main.py  sea_main.cpp
control/motor_control/src/: main.cpp
control/motor_control/test_gyems/: CMakeLists.txt  test.cpp  test_gyems
core/: __init__.py  controller.py  executor.py  imgprocessor.py  learner.py  utils.py
gan/: __init__.py  test.py  train.py  utils.py
ge/: 戈_0_font3.txt  戈_1_font3.txt
old_word/: 戈_2_font3.txt  猴_0_font3.txt  猴_10_font3.txt  猴_11_font3.txt  猴_1_font3.txt  猴_2_font3.txt  猴_3_font3.txt  猴_4_font3.txt  猴_5_font3.txt  猴_6_font3.txt  猴_7_font3.txt  猴_8_font3.txt  猴_9_font3.txt  猴_font1.txt  田_0_font1.txt  行_0_font1.txt  行_1_font1.txt  行_2_font1.txt  行_3_font1.txt  行_4_font1.txt  行_5_font1.txt
tools/: __init__.py  font2img.py  graphics2svg.py  img2traj.py  one_stroke_generator.py  skeltonize.py  (+1 more)
(+1519 files in other folders)
